--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 rust-1.4.0-x86_64-unknown-linux-gnu-arm-unknown-linux-gnueabihf.tar.gz filter=lfs diff=lfs merge=lfs -text
 rust-1.5.0-arm-unknown-linux-gnueabihf.tar.gz filter=lfs diff=lfs merge=lfs -text
+rust-1.6.0-arm-unknown-linux-gnueabihf.tar.gz filter=lfs diff=lfs merge=lfs -text
